<resources>
    <string name="app_name">My Application</string>
    <string name="_24_7_health_care">24*7 HEALTH CARE</string>
    <string name="login">LOGIN</string>
    <string name="username">username</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="registration">Registration</string>
    <string-array name="timings">
        <item>10:00–11:00</item>
        <item>11:00–12:00</item>
        <item>12:00–1:00</item>
        <item>1:00–2:00</item>
        <item>4:00–5:00</item>
        <item>5:00–6:00</item>
        <item>6:00–7:00</item>
        <item>7:00–8:00</item>


    </string-array>

</resources>