<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity"
    android:orientation="vertical"
    android:background="@drawable/back1">

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="35sp"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:text="@string/_24_7_health_care" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/editTextText"
        android:layout_marginTop="20sp"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20sp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="25sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextPwd"
        android:layout_marginTop="10sp"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="25sp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:hint="Password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:layout_marginBottom="20sp"/>


    <Button
        android:id="@+id/button"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:text="LOGIN"
        android:backgroundTint="@color/purple_500"

        android:textSize="25dp" />
    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register for new user"
        android:textColor="@color/white"
        android:layout_marginTop="20sp"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>